# tetanus

./: .gitignore  Cargo.toml  README.md  deploy.py
.cargo/: config.toml
frc/: Cargo.toml
frc-sys/: Cargo.toml  build.rs  install_deps.py  install_roborio_libs.sh
frc-sys/src/: lib.rs
frc-sys/vendordeps/: README.md  navx_frc.json  roborio.json  wpilib.json
frc-sys/vendordeps/wpilib/: ni-libraries.json  opencv.json  wpilib.json
frc-sys/wrappers/: ctre.h  rev.h  wpilib.h  wpilib_RobotBase.cc  wpilib_RobotBase.h
frc/src/: lib.rs
frc/src/ctre/: mod.rs
frc/src/ctre/motorcontrol/: mod.rs  stator_current_limit_configuration.rs  supply_current_limit_configuration.rs
frc/src/ctre/motorcontrol/can/: base_motor_controller.rs  base_talon.rs  mod.rs  talon_fx.rs
frc/src/ctre/sensors/: cancoder.rs  mod.rs
frc/src/rev/: mod.rs  rev_CANSparkMax.rs
frc/src/wpilib/: driver_station.rs  generic_hid.rs  mod.rs  pwm.rs  pwm_motor_controller.rs  robot_base.rs  robot_controller.rs  servo.rs  talon_fx.rs  xbox_controller.rs
r2021-swerve/: Cargo.toml
r2021-swerve/src/: funky_robot.rs  main.rs
r2021-swerve/src/subsystems/: driver.rs  drivetrain.rs  mod.rs
rswerve/: Cargo.toml
rswerve/src/: main.rs
tetanus-core/: Cargo.toml
tetanus-core/src/: consumer.rs  lib.rs  node.rs  producer.rs
tetanus-frc/: Cargo.toml
tetanus-frc/src/: esc.rs  lib.rs
