[package]
name = "r2021-swerve"
version = "0.1.0"
authors = ["Andrew (Andy) Min <me@andrewmin.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frc = { path = "../frc" }
uom = {version = "0.31.1", default-features = false, features = [ "autoconvert", "f64", "si", "std", "try-from", "use_serde" ] }