[package]
name = "tetanus-frc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frc = { path = "../frc" }

anyhow = "1.0"
uom = {version = "0.31.1", default-features = false, features = [ "autoconvert", "f64", "si", "std", "try-from", "use_serde" ] }